<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoActivity">

    <Button
        android:id="@+id/info_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:backgroundTint="@color/light_blue"
        android:elevation="2dp"
        android:text="@string/info_button" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_navigation"
        android:layout_below="@id/info_button">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/info_title_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/info_about_dresdenstory"
                android:textSize="24sp"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:id="@+id/info_about_us_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:padding="20dp"
                android:background="@drawable/round_box"
                android:elevation="1dp"
                android:text="@string/info_dresdenstory_description"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/info_image_1"
                android:contentDescription="@string/app_name"/>

            <TextView
                android:id="@+id/info_title_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/info_references"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:id="@+id/info_about_us_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="30dp"
                android:padding="20dp"
                android:background="@drawable/round_box"
                android:elevation="1dp"
                android:text="@string/info_links"
                android:textAlignment="textStart"
                android:textSize="16sp" />

        </LinearLayout>

    </ScrollView>

    <!-- main menu -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/round_corner"
        android:elevation="2dp"
        app:itemIconSize="30dp"
        app:itemIconTint="@drawable/selector"
        app:itemRippleColor="@android:color/transparent"
        app:itemTextColor="@drawable/selector"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/menu_navigation" />


</RelativeLayout>