<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ChapterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/chapter_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/chapter_title_locked"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/chapter_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/chapter_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/chapter_location_locked"
            android:textColor="@color/gray"
            android:textSize="16sp"
            android:textStyle="italic"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/chapter_short_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chapter_title" />

        <TextView
            android:id="@+id/chapter_short_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/round_box"
            android:elevation="2dp"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/chapter_short_description_locked"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/chapter_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chapter_location" />

        <TextView
            android:id="@+id/chapter_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:gravity="center"
            android:justificationMode="inter_word"
            android:text="@string/chapter_content_locked"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/chapter_question_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chapter_short_description" />

        <TextView
            android:id="@+id/chapter_question_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/chapter_question_heading"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/chapter_question"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chapter_content" />

        <TextView
            android:id="@+id/chapter_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/chapter_question_placeholder"
            android:textSize="20sp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/chapter_answer_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chapter_question_title" />

        <LinearLayout
            android:id="@+id/chapter_answer_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_box"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chapter_question">

            <EditText
                android:id="@+id/chapter_answer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="80dp"
                android:layout_weight="0.75"
                android:hint="@string/chapter_answer_prompt"
                android:imeOptions="actionGo"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLines="1" />

            <Button
                android:id="@+id/chapter_send"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="80dp"
                android:layout_weight="0.25"
                android:text="@string/chapter_send_button" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>